# wb_project

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: schema.py  urls.py
config/: settings.py
orders/: admin.py  models.py  schema.py  serializers.py  services.py  urls.py  validators.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_status.py
products/: admin.py  models.py  permissions.py  schema.py  serializers.py  urls.py  validators.py  views.py
products/migrations/: 0001_initial.py
tests/: conftest.py  test_cart.py  test_checkout.py  test_products.py  test_users.py
users/: admin.py  models.py  schema.py  serializers.py  services.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
