[project]
name = "wb-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
    "zxcvbn>=4.5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config.settings'
python_files = ['test_*.py']
testpaths = ['tests']

[tool.ruff]
# Максимальная длина строки кода. Если строка длиннее 79 символов, Ruff выдаст ошибку/отформатирует её (PEP 8)
line-length = 79

# Размер отступа (в пробелах) для выравнивания кода (4 пробела — стандарт для Python)
indent-width = 4

# Требовать, чтобы у пользователя была установлена версия Ruff не ниже указанной
required-version = ">=0.11.11"

# Целевая версия Python. Линтер будет проверять код с учетом синтаксиса Python 3.12
target-version = "py312"

# Включает "превью" режим для использования новых правил линтинга и форматирования
preview = true

# Папки и файлы, которые Ruff вообще не будет проверять и трогать
exclude = ["config", "manage.py", "settings.py", "migrations", "apps.py"]

[tool.ruff.format]
# Включает автоматическое форматирование примеров кода внутри документации (docstrings)
docstring-code-format = true

# Максимальная длина строки кода именно внутри примеров в документации
docstring-code-line-length = 60

# Тип окончания строк при сохранении файлов. "lf" — стандарт для Linux/macOS
line-ending = "lf"

# Использовать одинарные кавычки (') по умолчанию для строк при автоматическом форматировании
quote-style = "single"


[tool.ruff.lint]
# Здесь мы прописываем только те правила, которые линтер НЕ будет проверять:
ignore = [
    "D106",   # Докстинги мата классов
    "E265",   # Разрешает не ставить пробел после '#' в начале блока комментариев
    "F811",   # Разрешает повторное использование (переопределение) имени переменной или функции
    "N818",   # Разрешает именовать классы исключений без обязательного суффикса "Error" в конце
    "W505",   # Разрешает строкам документации превышать лимит длины строки
    "ANN401", # Разрешает использовать тип 'Any' в аннотациях типов
    "COM812", # Отключает требование к запятой в конце списков (чтобы не конфликтовать с форматировщиком)
    "ANN204", # Разрешает НЕ писать возвращаемый тип для магического метода __init__ (ведь он всегда возвращает None)

    # --- НАСТРОЙКА ИГНОРИРОВАНИЯ DOCSTRINGS (как вы просили) ---
    "D100",   # Разрешает НЕ писать документацию в самом начале каждого файла (.py)
    "D104",   # Разрешает НЕ писать документацию для файлов пакетов (__init__.py)
    "D105",   # Разрешает НЕ писать документацию для дандер (магических) методов вроде __str__
    "D107",   # Разрешает НЕ писать документацию для метода __init__ внутри классов
    # (Правило D101 для проверки наличия docstrings у Классов мы сюда НЕ пишем, поэтому Ruff будет СТРОГО требовать их наличие!)

    # --- НАСТРОЙКА ОТСТУПОВ И СТИЛЯ DOCSTRINGS (как вы просили) ---
    "D203",   # Отключает требование пустой строки ПЕРЕД docstring класса. Вместо этого сработает D211 (docstring пишется сразу под именем класса)
    "D213",   # Отключает вариант, когда многострочный docstring начинается со второй строки. Вместо этого сработает D212 (docstring ОБЯЗАН начинаться на первой же строке)
    # (Мы удалили D211 и D212 из этого списка игнорирования, чтобы они включились и заставили docstring работать именно так, как вы просили!)
]

# Набор плагинов и категорий правил, которые Ruff ОБЯЗАН проверять:
select = [
    "E3",     # Соблюдение пустых строк между функциями и классами
    "E5",     # Ошибки, связанные с отступами кода
    "E4",     # Ошибки импортов
    "E7",     # Проверка правильности сравнений (пишем 'is None', а не '== None')
    "E9",     # Грубые синтаксические ошибки, из-за которых код вообще не запустится
    "W",      # Общие предупреждения стиля PEP 8
    "C90",    # Проверка McCabe: измеряет сложность кода (максимум 10 разветвлений)
    "I",      # Isort: автоматическая сортировка импортов по алфавиту и группам
    "N",      # Pep8-naming: проверка правильности имен (Классы с большой, переменные с маленькой)
    "D",      # Pydocstyle: проверка наличия и стиля оформления документации (docstrings)
    "F",      # Pyflakes: поиск логических ошибок (неиспользуемые импорты, забытые переменные)
    "ANN",    # Flake8-annotations: проверка того, что вы везде указали типы данных (type hinting)
    "ASYNC",  # Flake8-async: проверка правильности написания асинхронного кода (async/await)
    "A",      # Flake8-builtins: запрещает называть свои переменные именами встроенных функций (id, list, str)
    "COM",    # Flake8-commas: контроль за расстановкой запятых в коде
    "RET"     # Flake8-return: проверка логики операторов return (убирает лишние конструкции)
]


[tool.ruff.lint.extend-per-file-ignores]
# Исключения для конкретных файлов. В файлах "__init__.py" разрешены импорты не в начале файла и импорт в одну строку
"__init__.py" = ["E402", "E401"]


[tool.ruff.lint.flake8-annotations]
# Разрешает использовать '*' (аргументы *args и **kwargs) без строгого указания их типов
allow-star-arg-any = true


[tool.ruff.lint.isort]
# При сортировке импортов учитывать регистр букв (заглавные и строчные буквы отдельно)
case-sensitive = true

# Указывает, что папка "src" является вашим собственным кодом, чтобы её импорты группировались отдельно от внешних библиотек
known-local-folder = []


[tool.ruff.lint.mccabe]
# Если в функции больше 10 разветвлений (if/else/циклов), Ruff выдаст ошибку сложности
max-complexity = 10


[tool.ruff.lint.pycodestyle]
# Максимальная длина текста именно для строк документации (docstrings)
max-doc-length = 79

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.19",
]
# (Настройку max-line-length мы отсюда полностью УДАЛИЛИ, так как она дублировала глобальный параметр line-length = 79)
